--- a/Metronome-Swift/Base.lproj/Main.storyboard
+++ b/Metronome-Swift/Base.lproj/Main.storyboard
@@ -80,12 +80,22 @@
                                     <segue destination="9i7-qK-ccy" kind="presentation" modalPresentationStyle="overCurrentContext" modalTransitionStyle="crossDissolve" id="H5N-fU-8m3"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r9f-r2-GK7">
+                                <rect key="frame" x="169" y="517" width="36" height="36"/>
+                                <state key="normal" image="play"/>
+                                <state key="highlighted" image="play_highlight"/>
+                                <connections>
+                                    <action selector="togglePlayPause:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Uw5-y7-gFp"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.047058823529411764" green="0.047058823529411764" blue="0.047058823529411764" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="lyi-v4-qiX" firstAttribute="height" secondItem="huJ-0x-goJ" secondAttribute="height" id="05b-Rq-Zd7"/>
+                            <constraint firstItem="lyi-v4-qiX" firstAttribute="top" secondItem="r9f-r2-GK7" secondAttribute="bottom" constant="36" id="09j-gb-ODy"/>
                             <constraint firstItem="KrZ-CO-g8Q" firstAttribute="height" secondItem="lyi-v4-qiX" secondAttribute="height" id="1iM-fF-gzI"/>
+                            <constraint firstItem="r9f-r2-GK7" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2DS-Qv-vOn"/>
                             <constraint firstAttribute="centerX" secondItem="y8r-1J-ZFl" secondAttribute="centerX" id="6fM-Xn-aF0"/>
                             <constraint firstItem="y8r-1J-ZFl" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="9WH-lv-5nf"/>
                             <constraint firstItem="KrZ-CO-g8Q" firstAttribute="centerY" secondItem="lyi-v4-qiX" secondAttribute="centerY" id="Dsg-bD-E4z"/>
@@ -109,12 +119,13 @@
                             <color key="tintColor" red="0.99607843139999996" green="0.99607843139999996" blue="0.99607843139999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
                                 <action selector="openMenuWithSender:" destination="BYZ-38-t0r" id="Hpm-4o-Xeh"/>
-                                <segue destination="PgZ-xe-vib" kind="show" id="I2W-Q5-TwH"/>
+                                <segue destination="PgZ-xe-vib" kind="show" identifier="openSettings" id="I2W-Q5-TwH"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="NavBar" destination="0G8-e5-L1y" id="lF2-wk-Fhf"/>
+                        <outlet property="PlayPauseButton" destination="r9f-r2-GK7" id="f0r-3p-0zh"/>
                         <outlet property="decrementButton" destination="huJ-0x-goJ" id="JyC-gp-OA9"/>
                         <outlet property="incrementButton" destination="KrZ-CO-g8Q" id="R7T-F4-o3n"/>
                         <outlet property="settingsButton" destination="9wm-QS-XZx" id="hHF-WN-q6L"/>
@@ -124,7 +135,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-415" y="448"/>
+            <point key="canvasLocation" x="-415.19999999999999" y="447.52623688155927"/>
         </scene>
         <!--Settings View Controller-->
         <scene sceneID="sZB-EN-lIg">
@@ -384,6 +395,8 @@
         <image name="cross" width="12" height="12"/>
         <image name="decrement" width="16" height="2"/>
         <image name="increment" width="16" height="16"/>
+        <image name="play" width="36" height="36"/>
+        <image name="play_highlight" width="36" height="36"/>
         <image name="settings" width="26" height="6"/>
     </resources>
 </document>
