--- a/Metronome-Swift/Base.lproj/Main.storyboard
+++ b/Metronome-Swift/Base.lproj/Main.storyboard
@@ -155,55 +155,6 @@
                                 <color key="textColor" red="0.99607843139999996" green="0.99607843139999996" blue="0.99607843139999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MTQ-dj-CCx" customClass="ColorPickerButton" customModule="TAP_Metronome_Swift" customModuleProvider="target">
-                                <rect key="frame" x="105" y="591" width="44" height="44"/>
-                                <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <connections>
-                                    <action selector="pressedColorButton:" destination="PgZ-xe-vib" eventType="touchUpInside" id="fuS-PI-QVb"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aYl-cm-0CC" customClass="ColorPickerButton" customModule="TAP_Metronome_Swift" customModuleProvider="target">
-                                <rect key="frame" x="165" y="591" width="44" height="44"/>
-                                <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <connections>
-                                    <action selector="pressedColorButton:" destination="PgZ-xe-vib" eventType="touchUpInside" id="cas-m6-4jQ"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gpB-nD-3cn" customClass="ColorPickerButton" customModule="TAP_Metronome_Swift" customModuleProvider="target">
-                                <rect key="frame" x="225" y="591" width="44" height="44"/>
-                                <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <connections>
-                                    <action selector="pressedColorButton:" destination="PgZ-xe-vib" eventType="touchUpInside" id="xcF-ap-UCF"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3gv-uz-FB6" customClass="ColorPickerButton" customModule="TAP_Metronome_Swift" customModuleProvider="target">
-                                <rect key="frame" x="74" y="529" width="44" height="44"/>
-                                <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <connections>
-                                    <action selector="pressedColorButton:" destination="PgZ-xe-vib" eventType="touchUpInside" id="S0J-2d-f28"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n0a-Ad-STu" customClass="ColorPickerButton" customModule="TAP_Metronome_Swift" customModuleProvider="target">
-                                <rect key="frame" x="134" y="529" width="44" height="44"/>
-                                <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <connections>
-                                    <action selector="pressedColorButton:" destination="PgZ-xe-vib" eventType="touchUpInside" id="08M-XY-U8a"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H5j-vI-4H3" customClass="ColorPickerButton" customModule="TAP_Metronome_Swift" customModuleProvider="target">
-                                <rect key="frame" x="194" y="529" width="44" height="44"/>
-                                <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <connections>
-                                    <action selector="pressedColorButton:" destination="PgZ-xe-vib" eventType="touchUpInside" id="hCm-Sc-xLS"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w5v-ho-d7T" customClass="ColorPickerButton" customModule="TAP_Metronome_Swift" customModuleProvider="target">
-                                <rect key="frame" x="254" y="529" width="44" height="44"/>
-                                <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <connections>
-                                    <action selector="pressedColorButton:" destination="PgZ-xe-vib" eventType="touchUpInside" id="vom-oj-aC4"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Oz7-tn-rFv" customClass="BeatNumberButton" customModule="TAP_Metronome_Swift" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="130" width="187.5" height="68"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -246,12 +197,6 @@
                                     <action selector="pressedTimeButton:" destination="PgZ-xe-vib" eventType="touchUpInside" id="SLY-9o-MSZ"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Colour" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GBW-fx-p83">
-                                <rect key="frame" x="96" y="481" width="182" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
-                                <color key="textColor" red="0.99607843139999996" green="0.99607843139999996" blue="0.99607843139999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aHx-ua-1pc" customClass="BeatNumberButton" customModule="TAP_Metronome_Swift" customModuleProvider="target">
                                 <rect key="frame" x="188" y="198" width="187" height="68"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -266,6 +211,61 @@
                                     <action selector="pressedTimeButton:" destination="PgZ-xe-vib" eventType="touchUpInside" id="xSD-fi-o7D"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MTQ-dj-CCx" customClass="ColorPickerButton" customModule="TAP_Metronome_Swift" customModuleProvider="target">
+                                <rect key="frame" x="106" y="410" width="44" height="44"/>
+                                <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="pressedColorButton:" destination="PgZ-xe-vib" eventType="touchUpInside" id="fuS-PI-QVb"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aYl-cm-0CC" customClass="ColorPickerButton" customModule="TAP_Metronome_Swift" customModuleProvider="target">
+                                <rect key="frame" x="166" y="410" width="44" height="44"/>
+                                <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="pressedColorButton:" destination="PgZ-xe-vib" eventType="touchUpInside" id="cas-m6-4jQ"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gpB-nD-3cn" customClass="ColorPickerButton" customModule="TAP_Metronome_Swift" customModuleProvider="target">
+                                <rect key="frame" x="225" y="410" width="44" height="44"/>
+                                <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="pressedColorButton:" destination="PgZ-xe-vib" eventType="touchUpInside" id="xcF-ap-UCF"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3gv-uz-FB6" customClass="ColorPickerButton" customModule="TAP_Metronome_Swift" customModuleProvider="target">
+                                <rect key="frame" x="75" y="350" width="44" height="44"/>
+                                <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="pressedColorButton:" destination="PgZ-xe-vib" eventType="touchUpInside" id="S0J-2d-f28"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n0a-Ad-STu" customClass="ColorPickerButton" customModule="TAP_Metronome_Swift" customModuleProvider="target">
+                                <rect key="frame" x="135" y="350" width="44" height="44"/>
+                                <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="pressedColorButton:" destination="PgZ-xe-vib" eventType="touchUpInside" id="08M-XY-U8a"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H5j-vI-4H3" customClass="ColorPickerButton" customModule="TAP_Metronome_Swift" customModuleProvider="target">
+                                <rect key="frame" x="195" y="350" width="44" height="44"/>
+                                <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="pressedColorButton:" destination="PgZ-xe-vib" eventType="touchUpInside" id="hCm-Sc-xLS"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w5v-ho-d7T" customClass="ColorPickerButton" customModule="TAP_Metronome_Swift" customModuleProvider="target">
+                                <rect key="frame" x="255" y="350" width="44" height="44"/>
+                                <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="pressedColorButton:" destination="PgZ-xe-vib" eventType="touchUpInside" id="vom-oj-aC4"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Colour" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GBW-fx-p83">
+                                <rect key="frame" x="97" y="302" width="182" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <color key="textColor" red="0.99607843139999996" green="0.99607843139999996" blue="0.99607843139999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.26098805144384779" blue="0.54550781250000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -284,7 +284,6 @@
                             <constraint firstItem="H5j-vI-4H3" firstAttribute="centerY" secondItem="n0a-Ad-STu" secondAttribute="centerY" id="QID-1G-ScZ"/>
                             <constraint firstItem="n0a-Ad-STu" firstAttribute="leading" secondItem="3gv-uz-FB6" secondAttribute="trailing" constant="16" id="Rq9-YE-gvW"/>
                             <constraint firstItem="vUT-CV-fML" firstAttribute="top" secondItem="Rqz-Nl-CRb" secondAttribute="bottom" constant="16" id="Ruo-lU-gT9"/>
-                            <constraint firstItem="7KZ-gf-eDx" firstAttribute="top" secondItem="aYl-cm-0CC" secondAttribute="bottom" constant="32" id="SHd-ha-teb"/>
                             <constraint firstItem="Oz7-tn-rFv" firstAttribute="top" secondItem="vUT-CV-fML" secondAttribute="bottom" constant="16" id="TaF-m9-Hwv"/>
                             <constraint firstItem="9fg-he-cHq" firstAttribute="centerY" secondItem="Oz7-tn-rFv" secondAttribute="centerY" id="VES-4c-S1x"/>
                             <constraint firstItem="3gv-uz-FB6" firstAttribute="top" secondItem="GBW-fx-p83" secondAttribute="bottom" constant="16" id="Zgv-Xu-Ibv"/>
@@ -297,10 +296,11 @@
                             <constraint firstItem="H5j-vI-4H3" firstAttribute="leading" secondItem="n0a-Ad-STu" secondAttribute="trailing" constant="16" id="nyF-CL-Bup"/>
                             <constraint firstItem="vUT-CV-fML" firstAttribute="centerX" secondItem="dDn-N8-zP2" secondAttribute="centerX" id="pim-Of-tXH"/>
                             <constraint firstItem="aHx-ua-1pc" firstAttribute="centerX" secondItem="9fg-he-cHq" secondAttribute="centerX" id="tko-XO-pWM"/>
+                            <constraint firstItem="GBW-fx-p83" firstAttribute="top" secondItem="tsQ-oQ-bTJ" secondAttribute="bottom" constant="32" id="uUC-iz-4nt"/>
                             <constraint firstItem="GBW-fx-p83" firstAttribute="centerX" secondItem="dDn-N8-zP2" secondAttribute="centerX" id="vfT-Hu-iQ8"/>
                             <constraint firstAttribute="trailing" secondItem="9fg-he-cHq" secondAttribute="trailing" id="x5b-Fs-h1X"/>
                             <constraint firstItem="9fg-he-cHq" firstAttribute="trailing" secondItem="vUT-CV-fML" secondAttribute="trailing" id="ySK-xx-c4v"/>
-                            <constraint firstItem="aYl-cm-0CC" firstAttribute="top" secondItem="n0a-Ad-STu" secondAttribute="bottom" constant="18" id="z5f-9C-0nV"/>
+                            <constraint firstItem="aYl-cm-0CC" firstAttribute="top" secondItem="n0a-Ad-STu" secondAttribute="bottom" constant="16" id="z5f-9C-0nV"/>
                             <constraint firstItem="w5v-ho-d7T" firstAttribute="leading" secondItem="H5j-vI-4H3" secondAttribute="trailing" constant="16" id="zg0-lL-P6z"/>
                         </constraints>
                     </view>
